FIX: toggle & 2top elemets alignment.

--- a/source/css/_common/components/sidebar/sidebar-toggle.styl
+++ b/source/css/_common/components/sidebar/sidebar-toggle.styl
@@ -3,8 +3,8 @@
   right: $b2t-position-right;
   bottom: 45px;
   width: 15px;
-  height: 15px;
-  padding: 5px;
+  height: 14px;
+  padding: 5px 4.25px;
   background: $black-deep;
   line-height: 0;
   z-index: $zindex-5;
